adding put ideas
